--- a/app/views/actividades/_listar_tareas.html.erb
+++ b/app/views/actividades/_listar_tareas.html.erb
@@ -31,7 +31,7 @@
 	    <div class="btn-group">              
 	      <%= link_to 'Acciones <b class="caret"></b>'.html_safe, '#', :class => 'btn btn-primary dropdown-toggle', 'data-toggle' => 'dropdown' %>
 	      <ul id="menu1" class="dropdown-menu">
-		<li><%= link_to icon_tag('Editar', :class => 'icon-pencil'), editar_tarea_path(:id => tarea.id), :remote => true %></li>
+		<li><%= link_to icon_tag('Editar', :class => 'icon-pencil'), edit_tarea_path(:id => tarea.id), :remote => true %></li>
 		<li><%= link_to icon_tag('Eliminar', :class => 'icon-trash'), tarea, confirm: '¿Está seguro de eliminar este registro?. Esta acción no se puede deshacer', method: :delete, :remote => true %></li>
 
 	      </ul>              
