--- a/app/views/tareas/_index.html.erb
+++ b/app/views/tareas/_index.html.erb
@@ -4,7 +4,7 @@
   </div>
 
   <div class="well">
-    <%= link_to icon_tag('Agregar', :class => 'icon-plus-sign icon-white'), new_tarea_path(:actividad_id => params[:actividad_id]), :class => 'btn btn-primary' %>
+    <%= link_to icon_tag('Agregar', :class => 'icon-plus-sign icon-white'), new_tarea_path(:actividad_id => params[:actividad_id]), :remote => true, :class => 'btn btn-primary' %>
   </div>
   <br />
 
@@ -37,8 +37,8 @@
             <div class="btn-group">              
               <%= link_to 'Acciones <b class="caret"></b>'.html_safe, '#', :class => 'btn btn-primary dropdown-toggle', 'data-toggle' => 'dropdown' %>
               <ul id="menu1" class="dropdown-menu">
-                <li><%= link_to icon_tag('Editar', :class => 'icon-pencil'), edit_tarea_path(tarea, :actividad_id => params[:actividad_id]) %></li>
-                <li><%= link_to icon_tag('Eliminar', :class => 'icon-trash'), tarea, confirm: '¿Está seguro de eliminar este registro?. Esta acción no se puede deshacer', method: :delete %></li>
+                <li><%= link_to icon_tag('Editar', :class => 'icon-pencil'), edit_tarea_path(tarea, :actividad_id => tarea.actividad_id), :remote => true %></li>
+                <li><%= link_to icon_tag('Eliminar', :class => 'icon-trash'), tarea, confirm: '¿Está seguro de eliminar este registro?. Esta acción no se puede deshacer', method: :delete, :remote => true %></li>
 
               </ul>              
             </div>
