--- a/app/views/tareas/update.js.erb
+++ b/app/views/tareas/update.js.erb
@@ -1,3 +1,3 @@
-$('#modal-body').html("<%= escape_javascript( render( :partial => 'actividades/listar_tareas', :locals => { :tareas => @tareas })) %>")
+$('#modal-body').html("<%= escape_javascript( render( :partial => 'index', :locals => { :tareas => @tareas })) %>")
 $('#add-tarea-modal').css('width' , '800px')
 $('#add-tarea-modal').css('height' , '600px')
