--- a/app/views/actividades/_campos_tarea.html.erb
+++ b/app/views/actividades/_campos_tarea.html.erb
@@ -23,7 +23,6 @@
   arreglar aca para cuando sea un nuevo tome del parametro
   :as => :hidden
   -->
-
   <% if @tarea.actividad_id.present? %>
     <%= f.input :actividad_id, :as => :hidden %>
   <% else %>
@@ -33,6 +32,6 @@
   <div class="form-actions">
     <%= f.button :submit, 'Guardar', :class => 'btn btn-success' %>
     <%#= link_to 'Cancelar', tareas_path(:actividad_id => params[:actividad_id]), :class => "btn" %>
-    <%= link_to 'Cancelar', listar_tareas_path(:id => @tarea.actividad_id), :remote => true, :class => "btn" %>
+    <%= link_to 'Cancelar', listar_tareas_path(:actividad_id => @actividad_id), :remote => true, :class => "btn" %>
   </div>
 <% end %>
