--- a/app/views/tareas/edit.js.erb
+++ b/app/views/tareas/edit.js.erb
@@ -1,3 +1,3 @@
-$('#modal-body').html("<%= escape_javascript( render( :partial => 'form', :locals => { :tarea => @tarea })) %>")
+$('#modal-body').html("<%= escape_javascript( render( :partial => 'actividades/campos_tarea', :locals => { :tarea => @tarea })) %>")
 $('#add-tarea-modal').css('width' , '500px')
 $('#add-tarea-modal').css('height' , '100%')
