--- a/app/views/actividades/_listar_tareas.html.erb
+++ b/app/views/actividades/_listar_tareas.html.erb
@@ -21,7 +21,7 @@
 	  <td><%= tarea.orden %></td>
 	  <td><%= tarea.nombre %></td>
 	  <td><%= tarea.metodo %></td>
-	  <td><%= tarea.tiempo_ejecucion %> <%= tarea.unidad_tiempo_id %></td>
+	  <td><%= tarea.tiempo_ejecucion %> <%= tarea.unidad_tiempo.nombre %></td>
 	  <td><%= tarea.tipo %></td>
 	  <td><%= tarea.cargo.nombre %></td>
 	  <td><%= tarea.tarea_sgt_id %></td>
