Se agrega minutos a unidades de tiempo

--- a/app/views/unidades_tiempos/index.html.erb
+++ b/app/views/unidades_tiempos/index.html.erb
@@ -13,6 +13,7 @@
       <tr>
         <th>Nombre</th>
         <th>Simbolo</th>
+        <th>Total Minutos</th>
 
         <th></th>
       </tr>
@@ -20,6 +21,7 @@
         <tr>
           <td><%= unidad_tiempo.nombre %></td>
           <td><%= unidad_tiempo.simbolo %></td>
+          <td><%= unidad_tiempo.minutos %></td>
           <td>
 
             <div class="btn-group">              
