--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -90,6 +90,8 @@
               <li><%= link_to 'Procesos', procesos_path %></li>
               <li><%= link_to 'SubProcesos', subprocesos_path %></li>
               <li><%= link_to 'Procedimientos', procedimientos_path %></li>
+              <li class="nav-header">Expedientes</li>
+              <li><%= link_to 'Expdientes', expedientes_path %></li>
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
