--- a/app/views/expedientes/_form.html.erb
+++ b/app/views/expedientes/_form.html.erb
@@ -1,20 +1,20 @@
 <%= simple_form_for @expediente, :html => { :class => 'form-horizontal' } do |f| %>
   <%= f.error_notification %>
   
-    <%= f.input :proceso_id %>
+    <%# f.input :proceso_id %>
     <%= f.input :procedimiento_id, :label => "Procedimiento", :collection => Procedimiento.all, :label_method => :nombre, :prompt => "-- Seleccione --" %>
     <%# f.input :tarea_actual_id %>
     <%# f.input :tarea_anterior_id %>
     <%= f.input :ente_id, :label => "Ente", :collection => Ente.all, :label_method => :nombre, :prompt => "-- Seleccione --" %>
-    <%= f.input :usuario_id %>
+    <%# f.input :usuario_id %>
     <%= f.input :descripcion %>
     <%= f.input :observacion %>
-    <%= f.input :observacion_fin %>
-    <%= f.input :estado %>
-    <%= f.input :usuario_ingreso_id %>
-    <%= f.input :fecha_ingreso %>
-    <%= f.input :usuario_finalizo_id %>
-    <%= f.input :fecha_finalizo %>
+    <%# f.input :observacion_fin %>
+    <%= f.input :estado, :collection => Expediente::ESTADO.map{|c| [c,c]}, :prompt => "-- Seleccione --" %>
+    <%# f.input :usuario_ingreso_id %>
+    <%# f.input :fecha_ingreso %>
+    <%# f.input :usuario_finalizo_id %>
+    <%# f.input :fecha_finalizo %>
     <%= f.input :numero %>
     <%= f.input :copia %>
 
