--- a/app/views/expedientes/index.html.erb
+++ b/app/views/expedientes/index.html.erb
@@ -1,6 +1,6 @@
 <section>
   <div class="page-header">
-    <h1>Expedientes <small>Lista de expedientes</small></h1>
+    <h1>Expedientes <small>Disponibles</small></h1>
   </div>
 
   <div class="well">
@@ -11,45 +11,28 @@
   <% if @expedientes.present? %>
     <table class="table table-striped table-bordered table-condensed">
       <tr>
-              <th>Proceso</th>
-              <th>Procedimiento</th>
-              <th>Tarea actual</th>
-              <th>Tarea anterior</th>
-              <th>Ente</th>
-              <th>Usuario</th>
-              <th>Descripcion</th>
-              <th>Observacion</th>
-              <th>Observacion fin</th>
-              <th>Estado</th>
-              <th>Usuario ingreso</th>
-              <th>Fecha ingreso</th>
-              <th>Usuario finalizo</th>
-              <th>Fecha finalizo</th>
-              <th>Numero</th>
-              <th>Copia</th>
-              
+        <th>Procedimiento</th>
+        <th>Ente</th>
+        <th>Usuario</th>
+        <th>Descripcion</th>
+        <th>Estado</th>
+        <th>Numero</th>
+        <th>Copia</th>
+
         <th></th>
       </tr>
       <% @expedientes.each do |expediente| %>
         <tr>
-                      <td><%= expediente.proceso_id %></td>
-                      <td><%= expediente.procedimiento_id %></td>
-                      <td><%= expediente.tarea_actual_id %></td>
-                      <td><%= expediente.tarea_anterior_id %></td>
-                      <td><%= expediente.ente_id %></td>
-                      <td><%= expediente.usuario_id %></td>
-                      <td><%= expediente.descripcion %></td>
-                      <td><%= expediente.observacion %></td>
-                      <td><%= expediente.observacion_fin %></td>
-                      <td><%= expediente.estado %></td>
-                      <td><%= expediente.usuario_ingreso_id %></td>
-                      <td><%= expediente.fecha_ingreso %></td>
-                      <td><%= expediente.usuario_finalizo_id %></td>
-                      <td><%= expediente.fecha_finalizo %></td>
-                      <td><%= expediente.numero %></td>
-                      <td><%= expediente.copia %></td>
-                    <td>
-            
+          <td><%= expediente.procedimiento_id %></td>
+          <td><%= expediente.ente_id %></td>
+          <td><%= expediente.usuario_id %></td>
+          <td><%= expediente.descripcion %></td>
+          <td><%= expediente.estado %></td>
+          <td><%= expediente.usuario_ingreso_id %></td>
+          <td><%= expediente.numero %></td>
+          <td><%= expediente.copia %></td>
+          <td>
+
             <div class="btn-group">              
               <%= link_to 'Acciones <b class="caret"></b>'.html_safe, '#', :class => 'btn btn-primary dropdown-toggle', 'data-toggle' => 'dropdown' %>
               <ul id="menu1" class="dropdown-menu">
