se agrega el buscador de personas, en el formulario de expedientes

--- a/app/views/expedientes/_form.html.erb
+++ b/app/views/expedientes/_form.html.erb
@@ -1,17 +1,17 @@
 <ul class="nav nav-tabs">
   <li class="tab active"><%= link_to 'Persona Física', '#', :class => 'pf' %></a></li>
- <!-- <li class="dropdown">
-    <a class="dropdown-toggle"
-       data-toggle="dropdown"
-       href="#">
-      Persona Jurídica
-      <b class="caret"></b>
-    </a>
-    <ul class="dropdown-menu">
-      <li><%= link_to 'Interno' %></li>
-      <li><%= link_to 'Externo' %></li>
-    </ul>
-  </li>-->
+  <!-- <li class="dropdown">
+     <a class="dropdown-toggle"
+        data-toggle="dropdown"
+        href="#">
+       Persona Jurídica
+       <b class="caret"></b>
+     </a>
+     <ul class="dropdown-menu">
+       <li><%= link_to 'Interno' %></li>
+       <li><%= link_to 'Externo' %></li>
+     </ul>
+   </li>-->
   <li class="tab"><%= link_to 'Persona Jurídica Interna', '#', :class => 'pji'  %></li>
   <li class="tab"><%= link_to 'Persona Jurídica Externa', '#', :class => 'pje' %></li>
 </ul>
@@ -26,22 +26,23 @@
       <div class="control-group select required">
         <label class="optional inline-inputs">Fecha de Ingreso</label>
         <div class="controls"><%= l(Time.now, :format => :fecha) %></div>
-        
+
       </div>      
       <div class="control-group">
         <%= f.label :ente_id, 'Cédula/Nombre y Apellido' %>
         <div class="controls">
           <%= f.text_field :numero_documento, :style => 'margin-right: 10px; width: 80px'  %>
-            <%= f.text_field :ente_id, :style => 'width: 305px', :readonly => true %>
-            <button class="btn" type="button"><i class="icon-search"></i></button>
+          <%= f.text_field :ente_id, :style => 'width: 305px', :readonly => true, :id => 'nombre-ente' %>
+          <%= f.hidden_field :ente_id %>
+          <button class="btn" type="button" onclick="mostrarPopup()"><i class="icon-search"></i></button>
         </div>
       </div>
-      <%#= f.input :ente_id, :label => 'Cédula/Nombre y Apellido' %>
-      <%#= f.input :ente_id, :label => "Ente", :collection => Ente.all, :label_method => :nombre, :prompt => "-- Seleccione --", :label => 'Cédula/Nombre y Apellido' %>
+  <%#= f.input :ente_id, :label => 'Cédula/Nombre y Apellido' %>
+  <%#= f.input :ente_id, :label => "Ente", :collection => Ente.all, :label_method => :nombre, :prompt => "-- Seleccione --", :label => 'Cédula/Nombre y Apellido' %>
       <%= f.input :procedimiento_id, :label => "Procedimiento", :collection => Procedimiento.all, :label_method => :nombre, :prompt => "-- Seleccione --" %>
       <%= f.input :copia, :label => 'Es Copia' %>
     </div>
-    
+
     <div class="span3 well" style="min-height:205px">
       <h4>Documentos Adjuntos</h4>
       <hr />
@@ -53,7 +54,7 @@
       <h4>Descripción</h4>
       <hr />
       <%= f.text_area :descripcion, :cols => 50, :rows => 10, :style => 'width:98%' %>
-      <%#= f.input :descripcion, :as => :text, :input_html => { :cols => 50, :rows => 10, :style => 'width:90%' }, :label => false %>
+  <%#= f.input :descripcion, :as => :text, :input_html => { :cols => 50, :rows => 10, :style => 'width:90%' }, :label => false %>
     </div>
   </div>
 
@@ -64,3 +65,22 @@
     <%= link_to 'Cancelar', expedientes_path, :class => "btn" %>
   </div>
 <% end %>
+
+<div class="modal" id="buscar-modal" style="display: none; width: 660px; padding: 10px">
+  <a class="close" data-dismiss="modal">x</a>
+  <%= render 'buscar_persona' %>
+</div>
+
+<script type="text/javascript">
+  function mostrarPopup(){
+
+    $('#buscar-modal').modal('toggle')
+  }
+  
+  function seleccionarEnte(id, nombre, documento){
+    $("#expediente_ente_id").val(id);
+    $("#nombre-ente").val(nombre);
+    $("#expediente_numero_documento").val(documento);
+    $('#buscar-modal').modal('hide')
+  }
+</script>
