--- a/app/views/expedientes/_form.html.erb
+++ b/app/views/expedientes/_form.html.erb
@@ -73,8 +73,8 @@
 
 <script type="text/javascript">
   function mostrarPopup(){
-
-    $('#buscar-modal').modal('toggle')
+    $('#buscar-modal').modal('toggle');
+    $('#search').focus();
   }
   
   function seleccionarEnte(id, nombre, documento){
