--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,9 +63,7 @@
 		    <li><%= link_to 'Entes', entes_path %></li>
 		    <li><%= link_to 'Paises', paises_path %></li>
 		    <li><%= link_to 'Ciudades', ciudades_path %></li>
-
-
-
+		    <li><%= link_to 'Unidades de Tiempo', unidades_tiempos_path %></li>
 		  </ul>
 		</li>
 
