--- a/app/views/procedimientos/_form.html.erb
+++ b/app/views/procedimientos/_form.html.erb
@@ -1,6 +1,7 @@
 <%= simple_form_for @procedimiento, :html => { :class => 'form-horizontal' } do |f| %>
   <%= f.error_notification %>
 
+  <%= f.input :serieproceso_id, :label => "SubProceso", :collection => Subproceso.all, :label_method => :codigo_nombre, :prompt => "-- Seleccione --" %>
   <%= f.input :nombre %>
   <%= f.input :objetivo %>
   <%= f.input :definiciones %>
