--- a/app/views/macroprocesos/index.html.erb
+++ b/app/views/macroprocesos/index.html.erb
@@ -5,41 +5,42 @@
 
   <div class="well">
     <%= link_to icon_tag('Agregar', :class => 'icon-plus-sign icon-white'), new_macroproceso_path, :class => 'btn btn-primary' %>
+    <%= link_to icon_tag('Formato 37', :class => 'icon-print icon-white'), reporte_formato_37_path, :class => 'btn btn-primary popupWindow' %>
   </div>
   <br />
 
   <% if @macroprocesos.present? %>
-    <table class="table table-striped table-bordered table-condensed">
+    <table class="table table-striped table-bordered table-condensed" style="font-size: 10px;">
       <tr>
-              <th>Nombre</th>
-              <th>Clasificacion</th>
-              <th>Objetivo</th>
-              <th>Codigo</th>
-              <th>Cargo</th>
-              
+        <th>Nombre</th>
+        <th>Clasificacion</th>
+        <th>Objetivo</th>
+        <th>Codigo</th>
+        <th>Cargo</th>
+
         <th></th>
       </tr>
       <% @macroprocesos.each do |macroproceso| %>
         <tr>
-                      <td><%= macroproceso.nombre %></td>
-                      <td><%= macroproceso.clasificacion %></td>
-                      <td><%= macroproceso.objetivo %></td>
-                      <td><%= macroproceso.codigo %></td>
-                      <td><%= macroproceso.cargo.nombre %></td>
-                    <td>
-            
+          <td><%= macroproceso.nombre %></td>
+          <td><%= macroproceso.clasificacion %></td>
+          <td><%= macroproceso.objetivo %></td>
+          <td><%= macroproceso.codigo %></td>
+          <td><%= macroproceso.cargo.nombre %></td>
+          <td>
+
             <div class="btn-group">              
               <%= link_to 'Acciones <b class="caret"></b>'.html_safe, '#', :class => 'btn btn-primary dropdown-toggle', 'data-toggle' => 'dropdown' %>
               <ul id="menu1" class="dropdown-menu">
                 <li><%= link_to icon_tag('Editar', :class => 'icon-pencil'), edit_macroproceso_path(macroproceso) %></li>
                 <li><%= link_to icon_tag('Eliminar', :class => 'icon-trash'), macroproceso, confirm: '¿Está seguro de eliminar este registro?. Esta acción no se puede deshacer', method: :delete %></li>
-
               </ul>              
             </div>
           </td>
         </tr>
       <% end %>
     </table> 
+  
   <% else %>
     <p class="alert-message warning">
       Todavía no hay macroprocesos, <%= link_to 'agregar', new_macroproceso_path %>.
