--- a/app/views/procesos/index.html.erb
+++ b/app/views/procesos/index.html.erb
@@ -4,30 +4,49 @@
   </div>
 
   <div class="well">
-    <%= link_to icon_tag('Agregar', :class => 'icon-plus-sign icon-white'), new_proceso_path, :class => 'btn btn-primary' %>
+    <div class="btn-toolbar">
+      <div class="btn-group">
+        <%= link_to icon_tag('Agregar', :class => 'icon-plus-sign icon-white'), new_proceso_path, :class => 'btn btn-primary' %>
+      </div>
+      <div class="btn-group">
+        <%= link_to 'Filtrar <b class="caret"></b>'.html_safe, '#', :class => 'btn btn-primary dropdown-toggle', 'data-toggle' => 'dropdown' %>
+        <ul id="menu1" class="dropdown-menu" style="max-width: 500px;">
+          <% @macroprocesos.each do |macroproceso| %>
+          <li><%= link_to macroproceso.codigo_nombre, procesos_path(macroproceso_id: macroproceso.id) %></li>
+          <% end %>
+        </ul>              
+      </div>
+      <div class="btn-group">
+        <% if(params[:macroproceso_id].present? and @procesos.present?) %>
+          <%= link_to icon_tag('Formato 38', :class => 'icon-print icon-white'), reporte_formato_38_path(macroproceso_id: params[:macroproceso_id]), :class => 'btn btn-primary popupWindow' %>
+        <% else %>
+          <%= link_to icon_tag('Formato 38', :class => 'icon-print'), "javascript:;", :class => 'btn disabled' %>
+        <% end %>
+      </div>
+    </div>
   </div>
   <br />
 
   <% if @procesos.present? %>
     <table class="table table-striped table-bordered table-condensed">
       <tr>
-              <th>Nombre</th>
-              <th>Objetivo</th>
-              <th>Codigo</th>
-              <th>Cargo</th>
-              <th>M.Proceso</th>
-              
+        <th>Nombre</th>
+        <th>Objetivo</th>
+        <th>Codigo</th>
+        <th>Cargo</th>
+        <th>M.Proceso</th>
+
         <th></th>
       </tr>
       <% @procesos.each do |proceso| %>
         <tr>
-                      <td><%= proceso.nombre %></td>
-                      <td><%= proceso.objetivo %></td>
-                      <td><%= proceso.codigo %></td>
-                      <td><%= proceso.cargo.nombre %></td>
-                      <td><%= proceso.macroproceso.codigo_nombre %></td>
-                    <td>
-            
+          <td><%= proceso.nombre %></td>
+          <td><%= proceso.objetivo %></td>
+          <td><%= proceso.codigo %></td>
+          <td><%= proceso.cargo.nombre %></td>
+          <td><%= proceso.macroproceso.codigo_nombre %></td>
+          <td>
+
             <div class="btn-group">              
               <%= link_to 'Acciones <b class="caret"></b>'.html_safe, '#', :class => 'btn btn-primary dropdown-toggle', 'data-toggle' => 'dropdown' %>
               <ul id="menu1" class="dropdown-menu">
