Primeros cambios en expediente para dar soporte a tareas

--- a/app/views/expedientes/show.html.erb
+++ b/app/views/expedientes/show.html.erb
@@ -91,4 +91,11 @@
       <%= @expediente.copia %>
     </p>
     
+    <div class="well">
+      <h2>Tarea Siguiente</h2>
+      <ul>
+        <li><%= @expediente.tarea_siguiente.nombre %></li>
+      </ul>
+    </div>
+    
   </section>
