--- a/app/views/expedientes/index.html.erb
+++ b/app/views/expedientes/index.html.erb
@@ -15,7 +15,6 @@
         <th>Ente</th>
         <th>Usuario</th>
         <th>Descripcion</th>
-        <th>Estado</th>
         <th>Numero</th>
         <th>Copia</th>
 
@@ -23,12 +22,13 @@
       </tr>
       <% @expedientes.each do |expediente| %>
         <tr>
-          <td><%= expediente.procedimiento_id %></td>
-          <td><%= expediente.ente_id %></td>
-          <td><%= expediente.usuario_id %></td>
-          <td><%= expediente.descripcion %></td>
-          <td><%= expediente.estado %></td>
-          <td><%= expediente.usuario_ingreso_id %></td>
+          <td>
+            <span class="label label-info"><%= expediente.estado %></span>
+            <%= expediente.procedimiento.nombre %>
+          </td>
+          <td><%= expediente.ente.nombre_completo %></td>
+          <td><%= expediente.usuario_ingreso.nombre_completo %></td>
+          <td><%= expediente.descripcion %></td>          
           <td><%= expediente.numero %></td>
           <td><%= expediente.copia %></td>
           <td>
