--- a/app/views/actividades/_campos_tarea.html.erb
+++ b/app/views/actividades/_campos_tarea.html.erb
@@ -13,7 +13,7 @@
   <% # = f.input :orden, :as => :hidden,  :input_html => { :value => "1" }  %> 
   <%= f.input :orden  %> 
   <%= f.input :nombre %>
-  <%= f.input :metodo %>
+  <%= f.input :metodo,:as => :text, :input_html => { :style => 'width:80%;', :rows => 3, :cols => 20  }  %>
   <%= f.input :tiempo_ejecucion %>
   <%= f.input :unidad_tiempo_id, :label => "Unidad de Tiempo", :collection => UnidadTiempo.all, :label_method => :nombre, :prompt => "-- Seleccione --" %>
   <%= f.input :tipo, :collection => Tarea::TIPO_TAREA.map{|c| [c,c]}, :prompt => "-- Seleccione --" %>
