--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -83,6 +83,8 @@
         <div class="span2">
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
+              <li class="nav-header">Entes</li>
+              <li><%= link_to 'Personas', entes_path %></li>
               <li class="nav-header">Procesos</li>
               <li><%= link_to 'MacroProcesos', macroprocesos_path %></li>
               <li><%= link_to 'Procesos', procesos_path %></li>
