--- a/app/views/expedientes/show.html.erb
+++ b/app/views/expedientes/show.html.erb
@@ -3,99 +3,89 @@
     <h1>Expediente</h1>
   </div>
 
-   <div class="well">
+  <div class="well">
     <div class="btn-group">
       <%= link_to icon_tag('Editar', :class => 'icon-edit icon-white'), edit_expediente_path(@expediente), :class => 'btn btn-primary' %>
       <%= link_to icon_tag('Borrar', :class => 'icon-trash icon-white'), @expediente, confirm: 'Estás seguro?', method: :delete, class: 'btn btn-primary' %>
-      <%= link_to icon_tag('Ver Todos', :class => 'icon-arrow-left icon-white'), expedientes_path, class: 'btn btn-primary' %>
-    </div>
-  </div>
+        <%= link_to icon_tag('Ver Todos', :class => 'icon-arrow-left icon-white'), expedientes_path, class: 'btn btn-primary' %>
+        </div>
+      </div>
 
-      <p>
-      <b>Proceso:</b>
-      <%= @expediente.proceso_id %>
-    </p>
-    
-      <p>
-      <b>Procedimiento:</b>
-      <%= @expediente.procedimiento_id %>
-    </p>
-    
-      <p>
-      <b>Tarea actual:</b>
-      <%= @expediente.tarea_actual_id %>
-    </p>
-    
-      <p>
-      <b>Tarea anterior:</b>
-      <%= @expediente.tarea_anterior_id %>
-    </p>
-    
-      <p>
-      <b>Ente:</b>
-      <%= @expediente.ente_id %>
-    </p>
-    
-      <p>
-      <b>Usuario:</b>
-      <%= @expediente.usuario_id %>
-    </p>
-    
-      <p>
-      <b>Descripcion:</b>
-      <%= @expediente.descripcion %>
-    </p>
-    
-      <p>
-      <b>Observacion:</b>
-      <%= @expediente.observacion %>
-    </p>
-    
-      <p>
-      <b>Observacion fin:</b>
-      <%= @expediente.observacion_fin %>
-    </p>
-    
-      <p>
-      <b>Estado:</b>
-      <%= @expediente.estado %>
-    </p>
-    
-      <p>
-      <b>Usuario ingreso:</b>
-      <%= @expediente.usuario_ingreso_id %>
-    </p>
-    
-      <p>
-      <b>Fecha ingreso:</b>
-      <%= @expediente.fecha_ingreso %>
-    </p>
-    
-      <p>
-      <b>Usuario finalizo:</b>
-      <%= @expediente.usuario_finalizo_id %>
-    </p>
-    
-      <p>
-      <b>Fecha finalizo:</b>
-      <%= @expediente.fecha_finalizo %>
-    </p>
-    
-      <p>
-      <b>Numero:</b>
-      <%= @expediente.numero %>
-    </p>
-    
-      <p>
-      <b>Copia:</b>
-      <%= @expediente.copia %>
-    </p>
-    
-    <div class="well">
-      <h2>Tarea Siguiente</h2>
-      <ul>
-        <li><%= @expediente.tarea_siguiente.nombre %></li>
-      </ul>
-    </div>
-    
-  </section>
+      <div class="rows">
+        <div class="span6 well">
+          <fieldset>
+            <legend>Datos del Expediente</legend>
+            <table>
+              <tr>
+                <th>Fecha de Ingreso: </th>
+                <td><%= l(@expediente.created_at) %></td>
+              </tr>
+              <tr>
+                <th>Número: </th>
+                <td><%= @expediente.numero_corto %>/<%= @expediente.anyo_ingreso %></td>
+              </tr>
+              <tr>
+                <th>Procedimiento:</th>
+                <td><%= @expediente.procedimiento.nombre %></td>
+              </tr>
+              <tr>
+                <th>Solicitante:</th>
+                <td>(<%= @expediente.ente.documento %>) <%= @expediente.ente.nombre_completo %></td>
+              </tr>
+              <tr>
+                <th>Estado:</th>
+                <td><%= @expediente.estado %></td>
+              </tr>
+              <tr>
+                <th>Ingresado por:</th>
+                <td><%= @expediente.usuario.login %></td>
+              </tr>
+              <tr>
+                <th>&iquest;Es copia?:</th>
+                <td><%= si_no(@expediente.copia) %></td>
+              </tr>
+            </table>
+          </fieldset>
+        </div>
+
+        <div class="span4 well">          
+          <fieldset>
+            <legend>Tareas</legend>
+            <div class="btn-group">
+              <%= link_to icon_tag('Inicar', :class => 'icon-edit icon-white'), edit_expediente_path(@expediente), :class => 'btn btn-primary' %>
+              <%= link_to icon_tag('Finalizar', :class => 'icon-trash icon-white'), @expediente, confirm: 'Estás seguro?', method: :delete, class: 'btn btn-primary', :disabled => true %>
+              <%= link_to icon_tag('Cancelar', :class => 'icon-arrow-left icon-white'), expedientes_path, class: 'btn btn-primary', :disabled => true %>
+            </div>
+      
+            <table>
+              <thead>
+                <tr>
+                  <th>&nbsp;</th>
+                  <th>Nombre</th>
+                  <th>Fecha Inicio</th>
+                  <th>Tiempo Transc.</th>
+                </tr>              
+              </thead>
+              <tbody>
+                <% @expediente.tarea_siguiente.actividad.tareas.order('orden').limit(3).where('orden >= ?', @expediente.tarea_siguiente.orden).each do |tarea| %>
+                  <tr>
+                    <td><%= check_box_tag :tarea, tarea.id, false, :disabled => tarea.id != @expediente.tarea_siguiente.id %></td>
+                    <td><%= tarea.nombre %></td>
+                    <td><%=  %></td>
+                    <td><%=  %></td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </fieldset>                      
+        </div>
+      </div>
+      <div class="rows">
+        <div class="span10 well">
+          <fieldset>
+            <legend>Descripción del Expediente</legend>
+            <%= @expediente.descripcion %>
+          </fieldset>
+        </div>
+      </div>
+    </section>
