--- a/app/views/expedientes/show.html.erb
+++ b/app/views/expedientes/show.html.erb
@@ -3,16 +3,17 @@
     <h1>Expediente</h1>
   </div>
 
-  <div class="well">
-    <div class="btn-group">
-      <%= link_to icon_tag('Editar', :class => 'icon-edit icon-white'), edit_expediente_path(@expediente), :class => 'btn btn-primary' %>
-      <%= link_to icon_tag('Borrar', :class => 'icon-trash icon-white'), @expediente, confirm: 'Estás seguro?', method: :delete, class: 'btn btn-primary' %>
-        <%= link_to icon_tag('Ver Todos', :class => 'icon-arrow-left icon-white'), expedientes_path, class: 'btn btn-primary' %>
+  <div class="row">
+    <div class="well-simple span11">
+      <div class="btn-group">
+        <%= link_to icon_tag('Editar', :class => 'icon-edit icon-white'), edit_expediente_path(@expediente), :class => 'btn btn-primary' %>
+        <%= link_to icon_tag('Borrar', :class => 'icon-trash icon-white'), @expediente, confirm: 'Estás seguro?', method: :delete, class: 'btn btn-primary' %>
+          <%= link_to icon_tag('Ver Todos', :class => 'icon-arrow-left icon-white'), expedientes_path, class: 'btn btn-primary' %>
+          </div>
         </div>
-      </div>
 
-      <div class="rows">
-        <div class="span6 well">
+
+        <div class="span6 well-simple">
           <fieldset>
             <legend>Datos del Expediente</legend>
             <table>
@@ -46,46 +47,86 @@
               </tr>
             </table>
           </fieldset>
+          
+          <div class="btn-group toolbar-rigth">
+            <%= link_to icon_tag('Enviar', :class => 'icon-plane icon-white'), edit_expediente_path(@expediente), :class => 'btn btn-primary' %>
+            <%= link_to icon_tag('Editar', :class => 'icon-edit icon-white'), expedientes_path, class: 'btn btn-primary' %>
+            <%= link_to icon_tag('Anular', :class => 'icon-ban-circle icon-white'), @expediente, confirm: 'Estás seguro?', method: :delete, class: 'btn btn-primary' %>            
+          </div>
+          
         </div>
 
-        <div class="span4 well">          
+        <div class="span5 well-simple">          
           <fieldset>
             <legend>Tareas</legend>
             <div class="btn-group">
-              <%= link_to icon_tag('Inicar', :class => 'icon-edit icon-white'), edit_expediente_path(@expediente), :class => 'btn btn-primary' %>
-              <%= link_to icon_tag('Finalizar', :class => 'icon-trash icon-white'), @expediente, confirm: 'Estás seguro?', method: :delete, class: 'btn btn-primary', :disabled => true %>
-              <%= link_to icon_tag('Cancelar', :class => 'icon-arrow-left icon-white'), expedientes_path, class: 'btn btn-primary', :disabled => true %>
+              <%= link_to icon_tag('Inicar', :class => 'icon-play icon-white'), edit_expediente_path(@expediente), :class => 'btn btn-primary' %>
+              <%= link_to icon_tag('Finalizar', :class => 'icon-ok-sign icon-white'), @expediente, confirm: 'Estás seguro?', method: :delete, class: 'btn btn-primary', :disabled => true %>
+                <%= link_to icon_tag('Cancelar', :class => 'icon-stop icon-white'), expedientes_path, class: 'btn btn-primary', :disabled => true %>
+                </div>
+
+                <table>
+                  <thead>
+                    <tr>
+                      <th>&nbsp;</th>
+                      <th>Nombre</th>
+                      <th>Fecha Inicio</th>
+                      <th>Tiempo Transc.</th>
+                    </tr>              
+                  </thead>
+                  <tbody class="table table-condensed table-striped">
+                    <% @expediente.tarea_siguiente.actividad.tareas.order('orden').limit(3).where('orden >= ?', @expediente.tarea_siguiente.orden).each do |tarea| %>
+                      <tr>
+                        <td><%= check_box_tag :tarea, tarea.id, false, :disabled => tarea.id != @expediente.tarea_siguiente.id %></td>
+                        <td><%= tarea.nombre %></td>
+                        <td><%=  %></td>
+                        <td><%=  %></td>
+                      </tr>
+                    <% end %>
+                  </tbody>
+                </table>
+              </fieldset>                      
             </div>
-      
-            <table>
-              <thead>
-                <tr>
-                  <th>&nbsp;</th>
-                  <th>Nombre</th>
-                  <th>Fecha Inicio</th>
-                  <th>Tiempo Transc.</th>
-                </tr>              
-              </thead>
-              <tbody>
-                <% @expediente.tarea_siguiente.actividad.tareas.order('orden').limit(3).where('orden >= ?', @expediente.tarea_siguiente.orden).each do |tarea| %>
+
+
+            <div class="span11 well-simple">
+              <fieldset>
+                <legend>Descripción del Expediente</legend>
+                <%= simple_format(@expediente.descripcion) %>
+              </fieldset>
+            </div>
+
+            <div class="span11">
+              <ul class="nav nav-tabs">
+                <li class="active">
+                  <%= link_to 'Registros Aplicables', '#' %>                
+                </li>
+                <li><%= link_to 'Documentos', '#' %></li>
+                <li><%= link_to 'Observaciones', '#' %></li>
+                <li><%= link_to 'Seguimiento', '#' %></li>
+              </ul>
+            </div>
+            <div class="span11">
+              <table class="table table-condensed table-striped">
+                <thead>
                   <tr>
-                    <td><%= check_box_tag :tarea, tarea.id, false, :disabled => tarea.id != @expediente.tarea_siguiente.id %></td>
-                    <td><%= tarea.nombre %></td>
-                    <td><%=  %></td>
-                    <td><%=  %></td>
+                    <th>Registros Aplicables - Tarea Actual</th>
+                    <th>Tipo</th>
+                    <th>Estado</th>
+                    <th>&nbsp;</th>
                   </tr>
-                <% end %>
-              </tbody>
-            </table>
-          </fieldset>                      
-        </div>
-      </div>
-      <div class="rows">
-        <div class="span10 well">
-          <fieldset>
-            <legend>Descripción del Expediente</legend>
-            <%= @expediente.descripcion %>
-          </fieldset>
-        </div>
-      </div>
-    </section>
+                </thead>
+                <tbody>
+                  <% 10.times do %>
+                    <tr>                      
+                      <td>Lorem Ipsum has been the</td>
+                      <td><span class="label label-success">Requerido</span></td>
+                      <td><span class="label label-success">Íntegro</span></td>
+                      <td><button class="btn btn-navbar">Acciones</button></td>
+                    </tr>
+                  <% end %>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </section>
