--- a/app/views/expedientes/show.html.erb
+++ b/app/views/expedientes/show.html.erb
@@ -49,9 +49,9 @@
           </fieldset>
           
           <div class="btn-group toolbar-rigth">
-            <%= link_to icon_tag('Enviar', :class => 'icon-plane icon-white'), edit_expediente_path(@expediente), :class => 'btn btn-primary' %>
-            <%= link_to icon_tag('Editar', :class => 'icon-edit icon-white'), expedientes_path, class: 'btn btn-primary' %>
-            <%= link_to icon_tag('Anular', :class => 'icon-ban-circle icon-white'), @expediente, confirm: 'Estás seguro?', method: :delete, class: 'btn btn-primary' %>            
+            <%= link_to icon_tag('Enviar', :class => 'icon-plane icon-white'), '#', :class => 'btn btn-primary' %>
+            <%= link_to icon_tag('Editar', :class => 'icon-edit icon-white'), '#', class: 'btn btn-primary' %>
+            <%= link_to icon_tag('Anular', :class => 'icon-ban-circle icon-white'), '#', class: 'btn btn-primary' %>            
           </div>
           
         </div>
@@ -60,9 +60,9 @@
           <fieldset>
             <legend>Tareas</legend>
             <div class="btn-group">
-              <%= link_to icon_tag('Inicar', :class => 'icon-play icon-white'), edit_expediente_path(@expediente), :class => 'btn btn-primary' %>
-              <%= link_to icon_tag('Finalizar', :class => 'icon-ok-sign icon-white'), @expediente, confirm: 'Estás seguro?', method: :delete, class: 'btn btn-primary', :disabled => true %>
-                <%= link_to icon_tag('Cancelar', :class => 'icon-stop icon-white'), expedientes_path, class: 'btn btn-primary', :disabled => true %>
+              <%= link_to icon_tag('Inicar', :class => 'icon-play icon-white'), '#', :class => 'btn btn-primary' %>
+              <%= link_to icon_tag('Finalizar', :class => 'icon-ok-sign icon-white'), '#', class: 'btn btn-primary', :disabled => true %>
+                <%= link_to icon_tag('Cancelar', :class => 'icon-stop icon-white'), '#', class: 'btn btn-primary', :disabled => true %>
                 </div>
 
                 <table>
@@ -122,7 +122,7 @@
                       <td>Lorem Ipsum has been the</td>
                       <td><span class="label label-success">Requerido</span></td>
                       <td><span class="label label-success">Íntegro</span></td>
-                      <td><button class="btn btn-navbar">Acciones</button></td>
+                      <td><button class="btn btn-primary">Acciones</button></td>
                     </tr>
                   <% end %>
                 </tbody>
